--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "bundledDependencies": {
     "@babel/parser": "7.21.8",
+    "@ctrl/tinycolor": "3.6.0",
     "@unhead/dom": "1.1.26",
     "@unhead/shared": "1.1.26",
     "@unhead/ssr": "1.1.26",
@@ -16,6 +17,8 @@
     "@vue/runtime-dom": "3.3.2",
     "@vue/server-renderer": "3.3.2",
     "@vue/shared": "3.3.2",
+    "@vueuse/core": "9.13.0",
+    "@vueuse/shared": "9.13.0",
     "bson": "5.3.0",
     "buffer-from": "1.1.2",
     "cookie": "0.5.0",
@@ -36,6 +39,8 @@
     "kareem": "2.5.1",
     "klona": "2.0.6",
     "lodash": "4.17.21",
+    "lodash-es": "4.17.21",
+    "lodash-unified": "1.0.3",
     "lru-cache": "6.0.0",
     "marked": "5.0.2",
     "memory-pager": "1.5.0",
@@ -79,6 +84,7 @@
     "validator": "13.9.0",
     "vue": "3.3.2",
     "vue-bundle-renderer": "1.0.3",
+    "vue-demi": "0.14.1",
     "vue-router": "4.2.0",
     "webidl-conversions": "7.0.0",
     "whatwg-url": "11.0.0",
