--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.1",
   "name": "curva",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "element-plus": "^2.3.4",
+    "googlethis": "^1.7.1",
     "marked": "^5.0.2",
     "mongoose": "^7.1.1",
     "mysql2": "^3.3.1",
