--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -19,20 +19,38 @@
     "@vue/shared": "3.3.2",
     "@vueuse/core": "9.13.0",
     "@vueuse/shared": "9.13.0",
+    "asynckit": "0.4.0",
+    "axios": "0.21.4",
+    "boolbase": "1.0.0",
     "bson": "5.3.0",
     "buffer-from": "1.1.2",
+    "cheerio": "1.0.0-rc.10",
+    "cheerio-select": "1.6.0",
+    "combined-stream": "1.0.8",
     "cookie": "0.5.0",
     "cookie-es": "1.0.0",
     "crypto-js": "4.1.1",
+    "css-select": "4.3.0",
+    "css-what": "6.1.0",
     "debug": "4.3.4",
     "defu": "6.1.2",
+    "delayed-stream": "1.0.0",
     "destr": "1.2.2",
     "devalue": "4.3.1",
+    "dom-serializer": "1.4.1",
+    "domelementtype": "2.3.0",
+    "domhandler": "4.3.1",
+    "domutils": "2.8.0",
     "dotenv": "16.0.3",
     "dottie": "2.0.3",
+    "entities": "2.2.0",
     "estree-walker": "2.0.2",
+    "follow-redirects": "1.15.2",
+    "form-data": "4.0.0",
+    "googlethis": "1.7.1",
     "h3": "1.6.5",
     "hookable": "5.5.3",
+    "htmlparser2": "6.1.0",
     "inflection": "1.13.4",
     "ip": "2.0.0",
     "iron-webcrypto": "0.7.0",
@@ -44,6 +62,8 @@
     "lru-cache": "6.0.0",
     "marked": "5.0.2",
     "memory-pager": "1.5.0",
+    "mime-db": "1.52.0",
+    "mime-types": "2.1.35",
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
     "mongodb": "5.3.0",
@@ -53,8 +73,11 @@
     "mquery": "5.0.0",
     "ms": "2.1.3 || 2.1.2",
     "node-fetch-native": "1.1.1",
+    "nth-check": "2.1.1",
     "ofetch": "1.0.1",
     "ohash": "1.1.2",
+    "parse5": "6.0.1",
+    "parse5-htmlparser2-tree-adapter": "6.0.1",
     "pathe": "1.1.0",
     "pg-connection-string": "2.5.0",
     "radix3": "1.0.1",
@@ -74,11 +97,13 @@
     "supports-color": "9.3.1",
     "toposort-class": "1.0.1",
     "tr46": "3.0.0",
+    "tslib": "2.5.0",
     "ufo": "1.1.2",
     "uncrypto": "0.1.2",
     "unctx": "2.3.0",
     "unenv": "1.4.1",
     "unhead": "1.1.26",
+    "unraw": "2.0.1",
     "unstorage": "1.6.0",
     "uuid": "8.3.2",
     "validator": "13.9.0",
