--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.5",
+    "@node-rs/jieba": "^1.7.0",
     "@types/cookie": "^0.5.1",
     "@types/crypto-js": "^4.1.1",
     "@types/marked": "^4.3.0",
