--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -5,6 +5,8 @@
   "bundledDependencies": {
     "@babel/parser": "7.21.8",
     "@ctrl/tinycolor": "3.6.0",
+    "@node-rs/jieba": "1.7.0",
+    "@node-rs/jieba-win32-x64-msvc": "1.7.0",
     "@unhead/dom": "1.1.26",
     "@unhead/shared": "1.1.26",
     "@unhead/ssr": "1.1.26",
@@ -48,7 +50,7 @@
     "follow-redirects": "1.15.2",
     "form-data": "4.0.0",
     "googlethis": "1.7.1",
-    "h3": "1.6.5",
+    "h3": "1.6.6",
     "hookable": "5.5.3",
     "htmlparser2": "6.1.0",
     "inflection": "1.13.4",
@@ -79,7 +81,7 @@
     "parse5": "6.0.1",
     "parse5-htmlparser2-tree-adapter": "6.0.1",
     "pathe": "1.1.0",
-    "pg-connection-string": "2.5.0",
+    "pg-connection-string": "2.6.0",
     "radix3": "1.0.1",
     "retry-as-promised": "7.0.4",
     "saslprep": "1.0.3",
