--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/marked": "^4.3.0",
     "@types/node": "^18.16.9",
     "@types/qs": "^6.9.7",
+    "@types/tough-cookie": "^4.0.2",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
@@ -34,6 +36,7 @@
     "sass": "^1.62.1",
     "sequelize": "^6.31.1",
     "tailwindcss": "^3.3.2",
+    "tough-cookie": "^4.1.2",
     "typescript": "^5.0.4",
     "vue": "^3.3.2"
   },
