--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "bundledDependencies": {
     "@babel/parser": "7.21.8",
+    "@ctrl/tinycolor": "3.6.0",
+    "@node-rs/jieba": "1.7.0",
     "@node-rs/jieba-win32-x64-msvc": "1.7.0",
     "@unhead/dom": "1.1.26",
     "@unhead/shared": "1.1.26",
@@ -47,6 +49,7 @@
     "estree-walker": "2.0.2",
     "follow-redirects": "1.15.2",
     "form-data": "4.0.0",
+    "googlethis": "1.7.1",
     "h3": "1.6.6",
     "hookable": "5.5.3",
     "htmlparser2": "6.1.0",
@@ -67,6 +70,7 @@
     "moment-timezone": "0.5.43",
     "mongodb": "5.3.0",
     "mongodb-connection-string-url": "2.6.0",
+    "mongoose": "7.1.1",
     "mpath": "0.9.0",
     "mquery": "5.0.0",
     "ms": "2.1.3 || 2.1.2",
@@ -79,15 +83,14 @@
     "pathe": "1.1.0",
     "pg-connection-string": "2.6.0",
     "proxy-from-env": "1.1.0",
-    "querystringify": "2.2.0",
     "radix3": "1.0.1",
-    "requires-port": "1.0.0",
     "retry-as-promised": "7.0.4",
     "saslprep": "1.0.3",
     "scule": "1.0.0",
     "semver": "7.5.1",
     "sequelize": "6.31.1",
     "sequelize-pool": "7.1.0",
+    "sift": "16.0.1",
     "smart-buffer": "4.2.0",
     "socks": "2.7.1",
     "source-map": "0.6.1",
@@ -103,14 +106,13 @@
     "unctx": "2.3.0",
     "unenv": "1.4.1",
     "unhead": "1.1.26",
-    "universalify": "0.2.0",
+    "unraw": "2.0.1",
     "unstorage": "1.6.0",
-    "url-parse": "1.5.10",
     "uuid": "8.3.2",
     "validator": "13.9.0",
     "vue": "3.3.2",
     "vue-bundle-renderer": "1.0.3",
-    "vue-demi": "0.14.1",
+    "vue-demi": "0.14.2",
     "vue-router": "4.2.0",
     "webidl-conversions": "7.0.0",
     "whatwg-url": "11.0.0",
