--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -26,6 +26,7 @@
     "boolbase": "1.0.0",
     "bson": "5.3.0",
     "buffer-from": "1.1.2",
+    "call-bind": "1.0.2",
     "cheerio": "1.0.0-rc.10",
     "cheerio-select": "1.6.0",
     "combined-stream": "1.0.8",
@@ -49,8 +50,13 @@
     "estree-walker": "2.0.2",
     "follow-redirects": "1.15.2",
     "form-data": "4.0.0",
+    "function-bind": "1.1.1",
+    "get-intrinsic": "1.2.1",
     "googlethis": "1.7.1",
     "h3": "1.6.6",
+    "has": "1.0.3",
+    "has-proto": "1.0.1",
+    "has-symbols": "1.0.3",
     "hookable": "5.5.3",
     "htmlparser2": "6.1.0",
     "inflection": "1.13.4",
@@ -76,6 +82,7 @@
     "ms": "2.1.3 || 2.1.2",
     "node-fetch-native": "1.1.1",
     "nth-check": "2.1.1",
+    "object-inspect": "1.12.3",
     "ofetch": "1.0.1",
     "ohash": "1.1.2",
     "parse5": "6.0.1",
@@ -83,6 +90,7 @@
     "pathe": "1.1.0",
     "pg-connection-string": "2.6.0",
     "proxy-from-env": "1.1.0",
+    "qs": "6.11.2",
     "radix3": "1.0.1",
     "retry-as-promised": "7.0.4",
     "saslprep": "1.0.3",
@@ -90,6 +98,7 @@
     "semver": "7.5.1",
     "sequelize": "6.31.1",
     "sequelize-pool": "7.1.0",
+    "side-channel": "1.0.4",
     "sift": "16.0.1",
     "smart-buffer": "4.2.0",
     "socks": "2.7.1",
