--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/marked": "^4.3.0",
     "@types/node": "^20.1.7",
     "@types/qs": "^6.9.7",
+    "@vueuse/core": "^10.1.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
@@ -36,7 +37,8 @@
     "sequelize": "^6.31.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vue": "^3.3.2"
+    "vue": "^3.3.2",
+    "vue-i18n": "^9.2.2"
   },
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
   "main": ".output/server/index.mjs",
