--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -31,26 +31,26 @@
     "bson": "5.3.0",
     "buffer-from": "1.1.2",
     "call-bind": "1.0.2",
-    "cheerio": "1.0.0-rc.10",
-    "cheerio-select": "1.6.0",
+    "cheerio": "1.0.0-rc.12 || 1.0.0-rc.10",
+    "cheerio-select": "2.1.0 || 1.6.0",
     "combined-stream": "1.0.8",
     "cookie": "0.5.0",
     "cookie-es": "1.0.0",
     "crypto-js": "4.1.1",
-    "css-select": "4.3.0",
+    "css-select": "5.1.0 || 4.3.0",
     "css-what": "6.1.0",
     "debug": "4.3.4",
     "defu": "6.1.2",
     "delayed-stream": "1.0.0",
     "destr": "1.2.2",
     "devalue": "4.3.1",
-    "dom-serializer": "1.4.1",
+    "dom-serializer": "2.0.0 || 1.4.1",
     "domelementtype": "2.3.0",
-    "domhandler": "4.3.1",
-    "domutils": "2.8.0",
+    "domhandler": "5.0.3 || 4.3.1",
+    "domutils": "3.1.0 || 2.8.0",
     "dotenv": "16.0.3",
     "dottie": "2.0.3",
-    "entities": "2.2.0",
+    "entities": "4.5.0 || 2.2.0",
     "estree-walker": "2.0.2",
     "follow-redirects": "1.15.2",
     "form-data": "4.0.0",
@@ -62,7 +62,7 @@
     "has-proto": "1.0.1",
     "has-symbols": "1.0.3",
     "hookable": "5.5.3",
-    "htmlparser2": "6.1.0",
+    "htmlparser2": "8.0.2 || 6.1.0",
     "inflection": "1.13.4",
     "ip": "2.0.0",
     "iron-webcrypto": "0.7.0",
@@ -89,8 +89,8 @@
     "object-inspect": "1.12.3",
     "ofetch": "1.0.1",
     "ohash": "1.1.2",
-    "parse5": "6.0.1",
-    "parse5-htmlparser2-tree-adapter": "6.0.1",
+    "parse5": "7.1.2 || 6.0.1",
+    "parse5-htmlparser2-tree-adapter": "7.0.0 || 6.0.1",
     "pathe": "1.1.0",
     "pg-connection-string": "2.6.0",
     "proxy-from-env": "1.1.0",
