--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.5",
     "@node-rs/jieba": "^1.7.0",
+    "@nuxtjs/vercel-builder": "^0.24.0",
     "@types/cookie": "^0.5.1",
     "@types/crypto-js": "^4.1.1",
     "@types/marked": "^4.3.0",
