--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.12a",
+  "version": "0.1.13",
   "name": "curva",
   "private": true,
   "scripts": {
@@ -31,12 +31,10 @@
     "googlethis": "^1.7.1",
     "marked": "^5.0.2",
     "mongoose": "^7.1.1",
-    "mysql2": "^3.3.1",
     "nuxt": "^3.5.0",
     "postcss": "^8.4.23",
     "qs": "^6.11.2",
     "sass": "^1.62.1",
-    "sequelize": "^6.31.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "vue": "^3.3.2",
