--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -49,7 +49,6 @@
     "domhandler": "5.0.3 || 4.3.1",
     "domutils": "3.1.0 || 2.8.0",
     "dotenv": "16.0.3",
-    "dottie": "2.0.3",
     "entities": "4.5.0 || 2.2.0",
     "estree-walker": "2.0.2",
     "follow-redirects": "1.15.2",
@@ -63,21 +62,16 @@
     "has-symbols": "1.0.3",
     "hookable": "5.5.3",
     "htmlparser2": "8.0.2 || 6.1.0",
-    "inflection": "1.13.4",
     "ip": "2.0.0",
     "iron-webcrypto": "0.7.0",
     "kareem": "2.5.1",
     "klona": "2.0.6",
-    "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "lodash-unified": "1.0.3",
-    "lru-cache": "6.0.0",
     "marked": "5.0.2",
     "memory-pager": "1.5.0",
     "mime-db": "1.52.0",
     "mime-types": "2.1.35",
-    "moment": "2.29.4",
-    "moment-timezone": "0.5.43",
     "mongodb": "5.3.0",
     "mongodb-connection-string-url": "2.6.0",
     "mongoose": "7.1.1",
@@ -92,16 +86,11 @@
     "parse5": "7.1.2 || 6.0.1",
     "parse5-htmlparser2-tree-adapter": "7.0.0 || 6.0.1",
     "pathe": "1.1.0",
-    "pg-connection-string": "2.6.0",
     "proxy-from-env": "1.1.0",
     "qs": "6.11.2",
     "radix3": "1.0.1",
-    "retry-as-promised": "7.0.4",
     "saslprep": "1.0.3",
     "scule": "1.0.0",
-    "semver": "7.5.1",
-    "sequelize": "6.31.1",
-    "sequelize-pool": "7.1.0",
     "side-channel": "1.0.4",
     "sift": "16.0.1",
     "smart-buffer": "4.2.0",
@@ -111,7 +100,6 @@
     "source-map-support": "0.5.21",
     "sparse-bitfield": "3.0.3",
     "supports-color": "9.3.1",
-    "toposort-class": "1.0.1",
     "tr46": "3.0.0",
     "tslib": "2.5.0",
     "ufo": "1.1.2",
@@ -121,16 +109,12 @@
     "unhead": "1.1.26",
     "unraw": "2.0.1",
     "unstorage": "1.6.0",
-    "uuid": "8.3.2",
-    "validator": "13.9.0",
     "vue": "3.3.2",
     "vue-bundle-renderer": "1.0.3",
     "vue-demi": "0.14.2 || 0.14.4",
     "vue-i18n": "9.2.2",
     "vue-router": "4.2.0",
     "webidl-conversions": "7.0.0",
-    "whatwg-url": "11.0.0",
-    "wkx": "0.5.0",
-    "yallist": "4.0.0"
+    "whatwg-url": "11.0.0"
   }
 }
