--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "googlethis": "^1.7.1",
     "marked": "^5.0.3",
     "mongoose": "^7.2.1",
+    "mysql2": "^3.3.3",
     "nuxt": "^3.5.1",
     "postcss": "^8.4.24",
     "qs": "^6.11.2",
     "sass": "^1.62.1",
+    "sequelize": "^6.31.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "vue": "^3.3.4",
