--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -5,15 +5,25 @@
   "bundledDependencies": {
     "@babel/parser": "7.22.3",
     "@ctrl/tinycolor": "3.6.0",
+    "@discordjs/builders": "1.6.3",
+    "@discordjs/collection": "1.5.1",
+    "@discordjs/formatters": "0.3.1",
+    "@discordjs/rest": "1.7.1",
+    "@discordjs/util": "0.3.1",
+    "@discordjs/ws": "0.8.3",
     "@intlify/core-base": "9.2.2",
     "@intlify/devtools-if": "9.2.2",
     "@intlify/message-compiler": "9.2.2",
     "@intlify/shared": "9.2.2",
     "@node-rs/jieba": "1.7.0",
     "@node-rs/jieba-win32-x64-msvc": "1.7.0",
+    "@sapphire/async-queue": "1.5.0",
+    "@sapphire/shapeshift": "3.9.0",
+    "@sapphire/snowflake": "3.5.1",
     "@unhead/dom": "1.1.27",
     "@unhead/shared": "1.1.27",
     "@unhead/ssr": "1.1.27",
+    "@vladfrangu/async_event_emitter": "2.2.2",
     "@vue/compiler-core": "3.3.4",
     "@vue/compiler-dom": "3.3.4",
     "@vue/compiler-ssr": "3.3.4",
@@ -30,6 +40,7 @@
     "boolbase": "1.0.0",
     "bson": "5.3.0",
     "buffer-from": "1.1.2",
+    "busboy": "1.6.0",
     "call-bind": "1.0.2",
     "cheerio": "1.0.0-rc.12 || 1.0.0-rc.10",
     "cheerio-select": "2.1.0 || 1.6.0",
@@ -44,6 +55,8 @@
     "delayed-stream": "1.0.0",
     "destr": "1.2.2",
     "devalue": "4.3.1",
+    "discord-api-types": "0.37.43",
+    "discord.js": "14.11.0",
     "dom-serializer": "2.0.0 || 1.4.1",
     "domelementtype": "2.3.0",
     "domhandler": "5.0.3 || 4.3.1",
@@ -52,6 +65,8 @@
     "dottie": "2.0.3",
     "entities": "4.5.0 || 2.2.0",
     "estree-walker": "2.0.2",
+    "fast-deep-equal": "3.1.3",
+    "file-type": "18.4.0",
     "follow-redirects": "1.15.2",
     "form-data": "4.0.0",
     "function-bind": "1.1.1",
@@ -63,6 +78,7 @@
     "has-symbols": "1.0.3",
     "hookable": "5.5.3",
     "htmlparser2": "8.0.2 || 6.1.0",
+    "ieee754": "1.2.1",
     "inflection": "1.13.4",
     "ip": "2.0.0",
     "iron-webcrypto": "0.7.0",
@@ -71,6 +87,7 @@
     "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "lodash-unified": "1.0.3",
+    "lodash.snakecase": "4.1.1",
     "lru-cache": "6.0.0",
     "marked": "5.0.3",
     "memory-pager": "1.5.0",
@@ -92,6 +109,7 @@
     "parse5": "7.1.2 || 6.0.1",
     "parse5-htmlparser2-tree-adapter": "7.0.0 || 6.0.1",
     "pathe": "1.1.0",
+    "peek-readable": "5.0.0",
     "pg-connection-string": "2.6.0",
     "proxy-from-env": "1.1.0",
     "qs": "6.11.2",
@@ -110,13 +128,18 @@
     "source-map-js": "1.0.2",
     "source-map-support": "0.5.21",
     "sparse-bitfield": "3.0.3",
+    "streamsearch": "1.1.0",
+    "strtok3": "7.0.0",
     "supports-color": "9.3.1",
+    "token-types": "5.0.1",
     "toposort-class": "1.0.1",
     "tr46": "3.0.0",
+    "ts-mixer": "6.0.3",
     "tslib": "2.5.0",
     "ufo": "1.1.2",
     "uncrypto": "0.1.2",
     "unctx": "2.3.0",
+    "undici": "5.22.1",
     "unenv": "1.4.1",
     "unhead": "1.1.27",
     "unraw": "2.0.1",
@@ -131,6 +154,7 @@
     "webidl-conversions": "7.0.0",
     "whatwg-url": "11.0.0",
     "wkx": "0.5.0",
+    "ws": "8.13.0",
     "yallist": "4.0.0"
   }
 }
