--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.5",
-    "@node-rs/jieba": "^1.7.0",
+    "@joplin/turndown-plugin-gfm": "^1.0.47",
     "@nuxtjs/vercel-builder": "^0.24.0",
     "@types/cookie": "^0.5.1",
     "@types/crypto-js": "^4.1.1",
     "@types/marked": "^5.0.0",
     "@types/node": "^20.2.5",
     "@types/qs": "^6.9.7",
+    "@types/turndown": "^5.0.1",
     "@vueuse/core": "^10.1.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
@@ -39,6 +40,7 @@
     "sass": "^1.62.1",
     "sequelize": "^6.31.1",
     "tailwindcss": "^3.3.2",
+    "turndown": "^7.1.2",
     "typescript": "^5.0.4",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2"
