--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -15,8 +15,7 @@
     "@intlify/devtools-if": "9.2.2",
     "@intlify/message-compiler": "9.2.2",
     "@intlify/shared": "9.2.2",
-    "@node-rs/jieba": "1.7.0",
-    "@node-rs/jieba-win32-x64-msvc": "1.7.0",
+    "@joplin/turndown-plugin-gfm": "1.0.47",
     "@sapphire/async-queue": "1.5.0",
     "@sapphire/shapeshift": "3.9.0",
     "@sapphire/snowflake": "3.5.1",
@@ -60,6 +59,7 @@
     "dom-serializer": "2.0.0 || 1.4.1",
     "domelementtype": "2.3.0",
     "domhandler": "5.0.3 || 4.3.1",
+    "domino": "2.1.6",
     "domutils": "3.1.0 || 2.8.0",
     "dotenv": "16.0.3",
     "dottie": "2.0.3",
@@ -136,6 +136,7 @@
     "tr46": "3.0.0",
     "ts-mixer": "6.0.3",
     "tslib": "2.5.0",
+    "turndown": "7.1.2",
     "ufo": "1.1.2",
     "uncrypto": "0.1.2",
     "unctx": "2.3.0",
