fix: code block highlight

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/marked": "^5.0.0",
     "@types/node": "^20.2.5",
+    "@types/prismjs": "^1.26.0",
     "@types/qs": "^6.9.7",
     "@types/turndown": "^5.0.1",
     "@vueuse/core": "^10.1.2",
@@ -37,6 +38,7 @@
     "mysql2": "^3.3.3",
     "nuxt": "^3.5.2",
     "postcss": "^8.4.24",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.2",
     "sass": "^1.62.1",
     "sequelize": "^6.32.0",
