--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.19-1",
+  "version": "0.1.20",
   "name": "curva",
   "description": "A free GPT-4 AI chatbot that can browse the web. This is for everyone.",
   "private": true,
