--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "element-plus": "^2.3.8",
+    "googlebard": "^1.0.7",
     "googlethis": "^1.7.1",
     "marked": "^5.1.2",
     "mongoose": "^7.4.1",
@@ -69,8 +70,5 @@
   "bugs": {
     "url": "https://github.com/cch137/evogpt/issues"
   },
-  "homepage": "https://github.com/cch137/evogpt#readme",
-  "dependencies": {
-    "googlebard": "^1.0.7"
-  }
+  "homepage": "https://github.com/cch137/evogpt#readme"
 }
