--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.4.0-c",
+  "version": "0.4.1",
   "name": "evogpt",
   "description": "A free GPT-4 AI chatbot that can browse the web. This is for everyone.",
   "private": true,
@@ -35,7 +35,6 @@
     "dotenv": "^16.3.1",
     "element-plus": "^2.3.8",
     "googlethis": "^1.7.1",
-    "gpt-3-encoder": "^1.1.4",
     "marked": "^6.0.0",
     "mindsdb-js-sdk": "^2.2.2",
     "mongoose": "^7.4.1",
@@ -74,6 +73,6 @@
   },
   "homepage": "https://github.com/cch137/evogpt#readme",
   "dependencies": {
-    "iplocation": "^7.2.0"
+    "@dqbd/tiktoken": "^1.0.7"
   }
 }
