--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^20.5.6",
     "@types/nodemailer": "^6.4.9",
     "@types/prismjs": "^1.26.0",
+    "@types/qrcode": "^1.5.2",
     "@types/qs": "^6.9.7",
     "@types/turndown": "^5.0.1",
     "@vueuse/core": "^10.4.0",
@@ -44,6 +45,7 @@
     "nuxt": "^3.6.5",
     "postcss": "^8.4.28",
     "prismjs": "^1.29.0",
+    "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "sass": "^1.66.1",
     "sequelize": "^6.32.1",
